OSS 私有桶改用签名 URL，并修复 ComfyUI 任务链路透传
上传与 API 返回使用 presigned URL，持久化仅存 objectKey；支持可配置地域 endpoint 与签名有效期，并修正带 query 的 OSS URL 扩展名解析。

Co-authored-by: Cursor <cursoragent@cursor.com>