@@ -8,21 +8,21 @@ import com.cn.common.configuration.AliConfiguration;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+import java.util.Date;
 import java.util.UUID;
-import java.io.ByteArrayInputStream;
 
 /**
- * The type Upload util.
- *
- * @author 时间海 @github dulaiduwang003
- * @version 1.0
+ * OSS 上传工具：对象私有存储，通过签名 URL 访问。
  */
 @Component
 @SuppressWarnings("all")
@@ -30,26 +30,23 @@ import java.io.ByteArrayInputStream;
 @RequiredArgsConstructor
 public class UploadUtil {
 
+    private static final long DEFAULT_SIGNED_URL_EXPIRE_SECONDS = 3600L;
+
     private final AliConfiguration aliConfiguration;
 
     public String uploadFile(final MultipartFile file, final String path) {
         AliConfiguration.Oss oss = aliConfiguration.getOss();
-        AliConfiguration.Certified certified = aliConfiguration.getCertified();
-        OSS ossClient = new OSSClientBuilder()
-                .build(oss.getEndpoint(), certified.getAccessKey(), certified.getSecretKey());
+        OSS ossClient = createOssClient();
         try (InputStream inputStream = file.getInputStream()) {
             String originalFileName = file.getOriginalFilename();
-
             assert originalFileName != null;
-            String fileName;
-            fileName = UUID.randomUUID() + originalFileName.substring(originalFileName.lastIndexOf('.'));
+            String fileName = UUID.randomUUID() + originalFileName.substring(originalFileName.lastIndexOf('.'));
+            String objectKey = path + "/" + fileName;
 
-            String filePath = path + "/" + fileName;
             ObjectMetadata objectMetadata = new ObjectMetadata();
             objectMetadata.setContentType(file.getContentType());
-            ossClient.putObject(oss.getBucketName(), filePath, inputStream, objectMetadata);
-            return oss.getDomain() + "/" + filePath;
-
+            ossClient.putObject(oss.getBucketName(), objectKey, inputStream, objectMetadata);
+            return signObjectKey(ossClient, oss.getBucketName(), objectKey);
         } catch (IOException e) {
             throw new OSSException();
         } finally {
@@ -57,60 +54,56 @@ public class UploadUtil {
         }
     }
 
+    /**
+     * 从外部 URL 拉取并上传到 OSS，返回 objectKey（用于持久化存储）。
+     */
     public String uploadUrl(String imageUrl, String path) {
         AliConfiguration.Oss oss = aliConfiguration.getOss();
-        AliConfiguration.Certified certified = aliConfiguration.getCertified();
-        OSS ossClient = new OSSClientBuilder().build(oss.getEndpoint(),certified.getAccessKey(),certified.getSecretKey());
+        OSS ossClient = createOssClient();
         try {
             URL url = new URL(imageUrl);
             String pathWithoutQuery = url.getPath();
             String fileNameWithExt = null;
 
-            // 尝试从查询参数中获取文件名
             String query = url.getQuery();
             if (query != null && query.contains("filename=")) {
                 String[] params = query.split("&");
                 for (String param : params) {
                     if (param.startsWith("filename=")) {
-                        fileNameWithExt = URLDecoder.decode(param.substring("filename=".length()), "UTF-8");
+                        fileNameWithExt = URLDecoder.decode(param.substring("filename=".length()), StandardCharsets.UTF_8);
                         break;
                     }
                 }
             }
 
-            // 如果没有从查询参数中获取到文件名，则使用 URL 路径中的文件名
             if (fileNameWithExt == null) {
                 fileNameWithExt = pathWithoutQuery.substring(pathWithoutQuery.lastIndexOf('/') + 1);
             }
 
-            String fileName = path + "/" + UUID.randomUUID().toString() + "." + getFileExtension(fileNameWithExt);
+            String objectKey = path + "/" + UUID.randomUUID() + "." + getFileExtension(fileNameWithExt);
 
-            InputStream inputStream = url.openStream();
-            ObjectMetadata objectMetadata = new ObjectMetadata();
-            objectMetadata.setContentType(getMimeType(fileNameWithExt));
-
-            ossClient.putObject(oss.getBucketName(), fileName, inputStream, objectMetadata);
-
-            return oss.getDomain() + "/" + fileName;
+            try (InputStream inputStream = url.openStream()) {
+                ObjectMetadata objectMetadata = new ObjectMetadata();
+                objectMetadata.setContentType(getMimeType(fileNameWithExt));
+                ossClient.putObject(oss.getBucketName(), objectKey, inputStream, objectMetadata);
+            }
+            return objectKey;
         } catch (IOException e) {
             throw new RuntimeException("Failed to upload media from URL: " + imageUrl, e);
         } finally {
-            if (ossClient != null) {
-                ossClient.shutdown();
-            }
+            ossClient.shutdown();
         }
     }
 
     public String uploadBase64Image(String base64OrDataUri, String path) {
         AliConfiguration.Oss oss = aliConfiguration.getOss();
-        AliConfiguration.Certified certified = aliConfiguration.getCertified();
-        OSS ossClient = new OSSClientBuilder().build(oss.getEndpoint(),certified.getAccessKey(),certified.getSecretKey());
+        OSS ossClient = createOssClient();
         try {
             String base64Data = base64OrDataUri;
             if (base64OrDataUri != null && base64OrDataUri.startsWith("data:")) {
                 int commaIdx = base64OrDataUri.indexOf(',');
                 if (commaIdx > 0) {
-                    String meta = base64OrDataUri.substring(5, commaIdx); // e.g. image/png;base64
+                    String meta = base64OrDataUri.substring(5, commaIdx);
                     String contentType = meta.contains(";") ? meta.substring(0, meta.indexOf(';')) : meta;
                     if (!"image/png".equalsIgnoreCase(contentType)) {
                         throw new IllegalArgumentException("Only PNG base64 is supported");
@@ -120,22 +113,90 @@ public class UploadUtil {
             }
 
             byte[] decodedBytes = Base64.getDecoder().decode(base64Data);
+            String objectKey = path + "/" + UUID.randomUUID() + ".png";
 
-            String objectKey = path + "/" + UUID.randomUUID().toString() + ".png";
             ObjectMetadata objectMetadata = new ObjectMetadata();
             objectMetadata.setContentType("image/png");
             objectMetadata.setContentLength(decodedBytes.length);
 
             ByteArrayInputStream bais = new ByteArrayInputStream(decodedBytes);
             ossClient.putObject(oss.getBucketName(), objectKey, bais, objectMetadata);
-            return oss.getDomain() + "/" + objectKey;
+            return signObjectKey(ossClient, oss.getBucketName(), objectKey);
         } catch (Exception e) {
             throw new RuntimeException("Failed to upload base64 image (PNG only)", e);
         } finally {
-            if (ossClient != null) {
-                ossClient.shutdown();
+            ossClient.shutdown();
+        }
+    }
+
+    /**
+     * 将本 bucket 内的 objectKey 或历史 OSS URL 转为新的签名 URL；外部 URL 原样返回。
+     */
+    public String toSignedUrl(String urlOrObjectKey) {
+        if (!StringUtils.hasText(urlOrObjectKey) || !isOwnOssResource(urlOrObjectKey)) {
+            return urlOrObjectKey;
+        }
+        String objectKey = extractObjectKey(urlOrObjectKey);
+        AliConfiguration.Oss oss = aliConfiguration.getOss();
+        OSS ossClient = createOssClient();
+        try {
+            return signObjectKey(ossClient, oss.getBucketName(), objectKey);
+        } finally {
+            ossClient.shutdown();
+        }
+    }
+
+    public boolean isOwnOssResource(String urlOrObjectKey) {
+        if (!StringUtils.hasText(urlOrObjectKey)) {
+            return false;
+        }
+        if (!urlOrObjectKey.startsWith("http://") && !urlOrObjectKey.startsWith("https://")) {
+            return urlOrObjectKey.startsWith("TEMP/")
+                    || urlOrObjectKey.startsWith("COMFYUI/")
+                    || urlOrObjectKey.startsWith("USER/");
+        }
+        AliConfiguration.Oss oss = aliConfiguration.getOss();
+        if (StringUtils.hasText(oss.getDomain())) {
+            String domain = oss.getDomain().replaceAll("/$", "");
+            if (urlOrObjectKey.startsWith(domain)) {
+                return true;
             }
         }
+        return StringUtils.hasText(oss.getBucketName()) && urlOrObjectKey.contains(oss.getBucketName() + ".");
+    }
+
+    public String extractObjectKey(String urlOrObjectKey) {
+        if (!StringUtils.hasText(urlOrObjectKey)) {
+            return urlOrObjectKey;
+        }
+        if (!urlOrObjectKey.startsWith("http://") && !urlOrObjectKey.startsWith("https://")) {
+            return urlOrObjectKey;
+        }
+        try {
+            URL parsed = new URL(urlOrObjectKey);
+            String path = parsed.getPath();
+            return path.startsWith("/") ? path.substring(1) : path;
+        } catch (Exception e) {
+            log.warn("无法解析 OSS URL，原样返回: {}", urlOrObjectKey);
+            return urlOrObjectKey;
+        }
+    }
+
+    private OSS createOssClient() {
+        AliConfiguration.Oss oss = aliConfiguration.getOss();
+        AliConfiguration.Certified certified = aliConfiguration.getCertified();
+        return new OSSClientBuilder().build(oss.getEndpoint(), certified.getAccessKey(), certified.getSecretKey());
+    }
+
+    private String signObjectKey(OSS ossClient, String bucketName, String objectKey) {
+        Date expiration = new Date(System.currentTimeMillis() + signedUrlExpireSeconds() * 1000L);
+        URL signedUrl = ossClient.generatePresignedUrl(bucketName, objectKey, expiration);
+        return signedUrl.toString();
+    }
+
+    private long signedUrlExpireSeconds() {
+        Long configured = aliConfiguration.getOss().getSignedUrlExpireSeconds();
+        return configured != null && configured > 0 ? configured : DEFAULT_SIGNED_URL_EXPIRE_SECONDS;
     }
 
     private String getMimeType(String fileName) {
@@ -156,7 +217,6 @@ public class UploadUtil {
         } else if (fileName.endsWith(".wav")) {
             return "audio/x-wav";
         }
-        // 默认返回二进制流类型
         return "application/octet-stream";
     }
 
@@ -166,11 +226,8 @@ public class UploadUtil {
         }
         int lastIndexOfDot = fileName.lastIndexOf('.');
         if (lastIndexOfDot == -1) {
-            return ""; // 没有扩展名
+            return "";
         }
         return fileName.substring(lastIndexOfDot + 1);
     }
-
-
-
 }
